--- a/packages/fints/package.json
+++ b/packages/fints/package.json
@@ -80,8 +80,7 @@
         "fast-xml-parser": "^3.12.12",
         "iconv-lite": "^0.4.24",
         "invariant": "^2.2.4",
-        "isomorphic-fetch": "^2.2.1",
-        "mt940-js": "^0.6.0",
-        "winston": "^3.1.0"
+        "cross-fetch": "^3.0.4",
+        "mt940-js": "^0.6.0"
     }
 }
